[gd_scene load_steps=12 format=3 uid="uid://ckmv5npbdlsn7"]

[ext_resource type="Script" uid="uid://bt43rkjtaxbup" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dugfiin2drgr4" path="res://icon.svg" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://dkh4gjus75r0u" path="res://Scripts/StorageUI.gd" id="3_6t5aa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vgqql"]
radius = 34.0
height = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(214, 199)

[sub_resource type="BoxMesh" id="BoxMesh_cvnsp"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vgqql"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fkybt"]

[sub_resource type="BoxMesh" id="BoxMesh_vgqql"]

[sub_resource type="BoxMesh" id="BoxMesh_fkybt"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_cvnsp"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprite2D:self_modulate")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="RigidBody2D" groups=["Player"]]
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_cvnsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_6t5aa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vgqql")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="PickupRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_cvnsp")
debug_color = Color(0.763702, 0, 0.346011, 0.42)

[node name="Box" type="Node2D" parent="."]

[node name="Desktop" type="Node2D" parent="."]
visible = false

[node name="Cover" type="MeshInstance2D" parent="Desktop"]
self_modulate = Color(0, 0, 0, 0.0980392)
position = Vector2(-3.05176e-05, 0)
scale = Vector2(1152, 648)
mesh = SubResource("BoxMesh_cvnsp")

[node name="Comp-temp" type="Sprite2D" parent="Desktop"]
texture_filter = 1
scale = Vector2(7.8, 7.8)
texture = SubResource("CompressedTexture2D_vgqql")

[node name="VBoxContainer" type="VBoxContainer" parent="Desktop"]
texture_filter = 1
offset_left = -177.0
offset_top = -223.0
offset_right = -81.0
offset_bottom = -97.0
scale = Vector2(3.57, 3.57)
theme_override_constants/separation = -30

[node name="TextureButton" type="TextureButton" parent="Desktop/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("CompressedTexture2D_fkybt")

[node name="Label" type="Label" parent="Desktop/VBoxContainer/TextureButton"]
layout_mode = 0
offset_left = 13.1653
offset_top = 20.4482
offset_right = 842.165
offset_bottom = 164.448
scale = Vector2(0.085, 0.085)
theme_override_font_sizes/font_size = 100
text = "Incoming orders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="Desktop/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("CompressedTexture2D_fkybt")

[node name="Label" type="Label" parent="Desktop/VBoxContainer/TextureButton2"]
layout_mode = 0
offset_left = 13.1653
offset_top = 20.4482
offset_right = 842.165
offset_bottom = 164.448
scale = Vector2(0.085, 0.085)
theme_override_font_sizes/font_size = 100
text = "Accepted orders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="Desktop/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("CompressedTexture2D_fkybt")

[node name="Label" type="Label" parent="Desktop/VBoxContainer/TextureButton3"]
layout_mode = 0
offset_left = 13.1653
offset_top = 20.4482
offset_right = 842.165
offset_bottom = 164.448
scale = Vector2(0.085, 0.085)
theme_override_font_sizes/font_size = 100
text = "Purchase"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="Desktop/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("CompressedTexture2D_fkybt")

[node name="Label" type="Label" parent="Desktop/VBoxContainer/TextureButton4"]
layout_mode = 0
offset_left = 13.1653
offset_top = 20.4482
offset_right = 842.165
offset_bottom = 164.448
scale = Vector2(0.085, 0.085)
theme_override_font_sizes/font_size = 100
text = "Upgrade Factory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxStorage" type="Node2D" parent="."]
visible = false

[node name="Cover" type="MeshInstance2D" parent="BoxStorage"]
self_modulate = Color(0, 0, 0, 0.0784314)
position = Vector2(7.98702e-06, -2.18153e-05)
scale = Vector2(1152, 648)
mesh = SubResource("BoxMesh_vgqql")
metadata/_edit_lock_ = true

[node name="UI" type="Node2D" parent="BoxStorage"]
script = ExtResource("3_6t5aa")

[node name="Outline1" type="MeshInstance2D" parent="BoxStorage/UI"]
self_modulate = Color(0.00622025, 0.662582, 0, 1)
position = Vector2(3.50001, -215.5)
scale = Vector2(351, 39)
mesh = SubResource("BoxMesh_fkybt")

[node name="Outline2" type="MeshInstance2D" parent="BoxStorage/UI"]
self_modulate = Color(0.00622025, 0.662582, 0, 1)
position = Vector2(3.5, 8.5)
scale = Vector2(351, 415)
mesh = SubResource("BoxMesh_fkybt")

[node name="Outline3" type="MeshInstance2D" parent="BoxStorage/UI"]
self_modulate = Color(0.00622025, 0.662582, 0, 1)
z_index = 3
position = Vector2(3.5, 178.5)
scale = Vector2(351, 75)
mesh = SubResource("BoxMesh_fkybt")

[node name="Field1" type="MeshInstance2D" parent="BoxStorage/UI"]
self_modulate = Color(0, 0, 0, 1)
z_index = 1
position = Vector2(3.49999, -215.5)
scale = Vector2(345, 33)
mesh = SubResource("BoxMesh_fkybt")

[node name="Field2" type="MeshInstance2D" parent="BoxStorage/UI"]
self_modulate = Color(0, 0, 0, 1)
z_index = 1
position = Vector2(3.49998, 8.50002)
scale = Vector2(345, 409)
mesh = SubResource("BoxMesh_fkybt")

[node name="Field3" type="MeshInstance2D" parent="BoxStorage/UI"]
self_modulate = Color(0, 0, 0, 1)
z_index = 3
position = Vector2(3.49998, 178.5)
scale = Vector2(345, 69)
mesh = SubResource("BoxMesh_fkybt")

[node name="BottomButtons" type="Node2D" parent="BoxStorage/UI"]
visible = false
z_index = 3

[node name="Icon" type="Sprite2D" parent="BoxStorage/UI/BottomButtons"]
position = Vector2(-130, 180)
scale = Vector2(0.359375, 0.359375)
texture = ExtResource("2_6t5aa")

[node name="Count" type="Label" parent="BoxStorage/UI/BottomButtons"]
offset_left = -88.0
offset_top = 156.0
offset_right = 7.99999
offset_bottom = 214.0
scale = Vector2(0.74, 0.74)
theme_override_font_sizes/font_size = 42
text = "1000"
vertical_alignment = 1

[node name="Add" type="Button" parent="BoxStorage/UI/BottomButtons"]
offset_left = 14.0
offset_top = 151.0
offset_right = 32.0
offset_bottom = 182.0
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 42
text = "+"

[node name="Sub" type="Button" parent="BoxStorage/UI/BottomButtons"]
offset_left = 51.0
offset_top = 151.0
offset_right = 73.0
offset_bottom = 217.0
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 42
disabled = true
text = "-"

[node name="Get" type="Button" parent="BoxStorage/UI/BottomButtons"]
offset_left = 99.0
offset_top = 151.0
offset_right = 178.0
offset_bottom = 217.0
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 42
text = "Get"

[node name="Title" type="Label" parent="BoxStorage/UI"]
z_index = 1
offset_left = -87.0
offset_top = -232.0
offset_right = 259.0
offset_bottom = -174.0
scale = Vector2(0.54, 0.54)
theme_override_colors/font_color = Color(0.986752, 0.986752, 0.986752, 1)
theme_override_font_sizes/font_size = 42
text = "Please select shit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BoxStorage/UI"]
offset_left = -169.0
offset_top = -196.0
offset_right = 176.0
offset_bottom = 140.0
horizontal_scroll_mode = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ItemList" type="VBoxContainer" parent="BoxStorage/UI/ScrollContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/separation = 87

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_cvnsp")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bhedhrwomsm6j")
spawn_path = NodePath("../Box")

[connection signal="area_entered" from="PickupRange" to="." method="_on_pickup_range_area_entered"]
[connection signal="area_exited" from="PickupRange" to="." method="_on_pickup_range_area_exited"]
[connection signal="pressed" from="BoxStorage/UI/BottomButtons/Add" to="BoxStorage/UI" method="_on_add_pressed"]
[connection signal="pressed" from="BoxStorage/UI/BottomButtons/Sub" to="BoxStorage/UI" method="_on_sub_pressed"]
[connection signal="pressed" from="BoxStorage/UI/BottomButtons/Get" to="BoxStorage/UI" method="_on_get_pressed"]
